--- a/style.css
+++ b/style.css
@@ -93,12 +93,28 @@ section{
 }
 
 @media(max-width: 700px){
+
+  body{
+    background-color: blue;
+  }
+
+  .button{
+    padding: 30px;
+  }
 section{
   width: 100%;
 }
 
+.size{
+  width: 100%;
+  height: 200px;
+}
+
 .sushi{
+  
   font-size: 15px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .kaikei,.Cancel{
@@ -108,4 +124,6 @@ section{
 li{
 position: relative;
 left: 0;
+}
+
 }
